k8s/miniflux/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: miniflux
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
      - name: miniflux
        image: miniflux/miniflux:2.0.37
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            memory: 10Mi
            cpu: 20m
          limits:
            memory: 50Mi
            cpu: 50m
