k8s/miniflux/service.yml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
spec:
  selector:
    app: miniflux
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
