k8s/miniflux/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: miniflux
  namespace: miniflux
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: le

spec:
  rules:
    - host: miniflux.slashdev.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  number: 80
